# PythonApps

./: .gitignore  README.md  main.py  pyproject.toml
Async/: async.py
Audiobook/: audio.py
Caching/: caching.py
CamChat/: camchat.py
CeasarEncrypt/: encrypt.py
Clipboard/: clip.py
ConvVidtoGif/: .gitignore  conv.py
Enumeration/: enum.py
FString/: fstring.py
FTP/: file.txt  ftp_client.py  output 1 .txt  tcp_client.py
GUIcalc/: guicalc.py
GUIcalc/FString/: fstring.py
GuiChat/: chat.py  client.py  server.py
GuiPaint/: guipaint.py
GuiTextEd/: editor.ui  guitxt.py
Hangman/: hangman.py
Kivy/: androidapp.py  kivy.py  neuralrandom.kv
Lambda/: lambda.py
ListComprehension/: lc.py
Map/: map.py
NetworkBasics/: basic.py  basicclient.py  basicserver.py  tcp_client.py  tcp_server.py  udp_client.py  udp_server.py
PasswordCrackerSHA1/: passcrackSHA1.py
PasswordGenerator/: passgen.py
Pong/: pong.py
PortScanner/: main.py  socketScan.py
PythonGames/: guessnum.py  rps.py  simon.py  tictactoe.py
QRCode/: qr.py
ReverseShell/: client.py  multiclientserver.py  server.py
SQLi/: scan.py
ScreenRecorder/: screenrec.py
ScreenSharing/: reciever.py  screenshare.py  sender.py
SnakeGame/: snake.py
SpeechRecognition/: speechrec.py
TCPChat/: client.py  output 0 .txt  server.py  tcp_server.py
Ternary/: ternary.py
Threading/: main.py
UDP_Chat/: udp_server.py
Wifi/: main.py
YttoMP3/: yttomp3.py
pokedexGUI/: pokedex.py
