[project]
name = "pythonapps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "opencv-python",
    "pillow>=11.3.0",
    "pyautogui",
    "pygame>=2.6.1",
    "pypdf2>=3.0.1",
    "pyttsx3",
    "qrcode>=8.2",
    "speechrecognition",
    "vidstream>=0.0.14",
]
