[project]
name = "pythonapps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio>=4.0.0",
    "kivy>=2.3.1",
    "numpy",
    "opencv-python",
    "pillow>=11.3.0",
    "pyautogui",
    "pygame>=2.6.1",
    "pypdf2>=3.0.1",
    "pypokedex>=1.6.0",
    "pyttsx3",
    "pytubefix>=10.7.3",
    "qrcode>=8.2",
    "speechrecognition",
    "urllib3>=2.6.3",
    "vidstream>=0.0.14",
]
